Version 7.4 (?? 2016)
  * Bug fixes

Version 7.3 (12 October 2016)
  * Added prediction intervals and simulation for nnetar().
  * Documentation improvement
  * Bug fixes

Version 7.2 (8 September 2016)
  * Faceting for autoplot.mts
  * Box-Cox support for ses, holt, hw
  * ets() now works for tiny time series
  * Added h-step fitted values in fitted() function.
  * seasonal adjustment added to thetaf()
  * y now the standard first argument in all modelling functions
  * Added truncate argument to auto.arima()
  * seasadj() now an S3 method
  * series with frequency < 1 and non-integer seasonality now handled better
  * ggplot2 theme support
  * Added gglagplot, gglagchull
  * Arima() and auto.arima() now allow any argument to be passed to stats::arima().
  * Bug fixes and speed improvements

Version 7.1 (14 April 2016)
  * Fixed bug in auto.arima where the Box-Cox transformation was sometimes applied twice
  * Improved axes for ggseasonalplot()
  * Improved tslm() to avoid some problems finding data
  * nnetar() updated to allow subsets()
  * Modified initial values for ets()
  * Improved unit tests to avoid deprecated functions and to avoid data from fpp
  * Removed fpp from Suggests list

Version 7.0 (3 April 2016)
  * Added ggplot2 graphics
  * Bias adjustment option added for all functions that allow Box-Cox transformations
  * Added Ccf function, and rewrote Acf to handle multivariate series.
  * tslm() completely rewritten to be more robust and to handle fourier terms more easily
  * Support for multivariate linear models added
  * subset.ts() more robust, and captures some errors.
  * Added xreg argument to nnetar()
  * Improved labels in seasonplot()
  * More unit tests added
  * Documentation improvements
  * Bug fixes

Version 6.2 (20 October 2015)
  * Many unit tests added using testthat.
  * Fixed bug in ets when very short seasonal series were passed in a data frame.
  * Fixed bug in nnetar where the initial predictor vector was reversed.