@@ -37,7 +37,8 @@ ggtsdisplay, ggmonthplot, ggseasonplot, seasonplot, ses, sindexf, splinef, tslm,
 fourierf,forecast.lm,thetaf, tsdisplay, simulate.ets, simulate.ar, simulate.Arima, simulate.fracdiff, simulate.nnetar,
 ndiffs, nsdiffs, dm.test,tbats.components, Acf,Pacf,Ccf,ma,CV,BoxCox.lambda,dshw, bats, tbats, msts,
 getResponse, tsoutliers, tsclean, bizdays, easter,stlm, forecast.stlm,
-StatForecast, GeomForecast, geom_forecast, gghistogram)
+StatForecast, GeomForecast, geom_forecast, gghistogram,
+checkresiduals)
 
 S3method(autoplot, acf)
 S3method(autoplot, ar)
