@@ -1,4 +1,5 @@
 Version 7.4 (?? 2016)
+  * Added gghistogram() and checkresiduals()
   * Bug fixes
 
 Version 7.3 (12 October 2016)
